@@ -23,6 +23,8 @@ package uk.co.petertribble.jproc.client;
 import uk.co.petertribble.jumble.JumbleUtils;
 import java.io.File;
 import java.util.Map;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.MalformedURLException;
 
@@ -221,6 +223,10 @@ public class PClientConfig {
      * @return  the URL of the server to connect to.
      */
     public URL getServerURL() throws MalformedURLException {
-	return new URL(remoteURL());
+	try {
+	    return new URI(remoteURL()).toURL();
+	} catch (URISyntaxException baduri) {
+	    throw new MalformedURLException(baduri.getMessage());
+	}
     }
 }
